gitops/platform/overlays/prod/gateways/gatewayclass.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass

metadata:
  name: public-gateway

spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
