gitops/platform/overlays/prod/gateways/public-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway

metadata:
  name: public-gateway
  namespace: envoy-gateway-system


spec:

  gatewayClassName: public-gateway

  infrastructure:
    parametersRef:
      group: gateway.envoyproxy.io
      kind: EnvoyProxy
      name: gateway-proxy-config
      namespace: envoy-gateway-system

  listeners:

  - name: https

    protocol: HTTPS

    port: 443

    hostname: "*.challan.pro"
    tls: 
      mode: Terminate
      certificateRefs: 
      - kind: Secret
        name: argocd-tls

    allowedRoutes:
      namespaces:
        from: All
  
  - name: https

    protocol: HTTPS

    port: 443

    hostname: "challan.pro"
    tls: 
      mode: Terminate
      certificateRefs: 
      - kind: Secret
        name: argocd-tls

    allowedRoutes:
      namespaces:
        from: All
