gitops/platform/overlays/prod/gateways/argocd-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute

metadata:
  name: argocd

  namespace: argocd

spec:

  parentRefs:

  - name: public-gateway
    namespace: envoy-gateway-system

  hostnames:
  - www.challan.pro
  - challan.pro

  rules:

  - backendRefs:

    - name: argocd-server

      port: 80
